# AI-agent-dock

./: README.md  index.html  package-lock.json  package.json
public/: preview.html
public/animations/: bear.riv  catinteractive.riv  eyetracking.riv
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/Agent/: Agent.css  AgentCharacter.tsx  RiveAgent.tsx
src/components/Dock/: Dock.css  Dock.tsx  DockItem.tsx
src/components/PromptPanel/: PromptPanel.css  PromptPanel.tsx
src/data/: agents.ts
src/hooks/: useMousePosition.ts
